# quandary

./: .gitlab-ci.yml  .gitmodules  .pytest.ini  .uberenv_config.json  404.html  CMakeLists.txt  GPU-notes.md  README.md  config_performance.toml  config_template.cfg  config_template.toml  index.html  mkdocs.yml  pyproject.toml  quandary.py  sitemap.xml  transmon_31_50.txt  transmon_31_80.txt
.ci-scripts/: build_and_test.sh
.github/: hubcast.yml
.github/workflows/: benchmark.yml  build.yml  test.yml
.gitlab/: custom-jobs.yml  custom-variables.yml
.gitlab/jobs/: dane.yml  performances.yml  tioga.yml  tuolumne.yml
.spack_env/: spack.yaml
.spack_env_tuolumne/: spack.yaml
QuandaryWithPython_HowTo/: index.html
benchmarks/: benchmark_comparison_31x50.md
config/: index.html
dev/bench/: data.js
docs/: parameter_reference.md
docs/mkdocs/: config.md  getting_started.md  parameter_reference.md  python_api.md  user_guide.md
doxygen/: annotated.html  cfgparser_8cpp.html  cfgparser_8cpp__incl.map  cfgparser_8cpp__incl.md5  cfgparser_8hpp.html  cfgparser_8hpp__dep__incl.map  cfgparser_8hpp__dep__incl.md5  cfgparser_8hpp__incl.map  cfgparser_8hpp__incl.md5  cfgparser_8hpp_source.html  classBSpline0-members.html  classBSpline0.html  classBSpline0__inherit__graph.map  classBSpline0__inherit__graph.md5  classBSpline2nd-members.html  classBSpline2nd.html  classBSpline2nd__coll__graph.map  classBSpline2nd__inherit__graph.md5  classCNOT-members.html  classCNOT.html  classCQNOT-members.html  classCQNOT.html  classCfgParser-members.html  classCfgParser.html  classCompositionalImplMidpoint-members.html  classCompositionalImplMidpoint.html  classCompositionalImplMidpoint__coll__graph.map  classCompositionalImplMidpoint__coll__graph.md5  classConfig-members.html  classConfig.html  classControlBasis-members.html  classControlBasis.html  classControlBasis__inherit__graph.map  classControlBasis__inherit__graph.md5  classExplEuler-members.html  classExplEuler.html  classExplEuler__coll__graph.map  classExplEuler__coll__graph.md5  classFromFile-members.html  classFromFile.html  (+303 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enums_4.js  enums_5.js  enums_7.js  enumvalues_0.js  (+61 more)
getting_started/: index.html
include/: cfgparser.hpp  config.hpp  config_defaults.hpp  config_types.hpp  config_validators.hpp  controlbasis.hpp  defs.hpp  gate.hpp  hamiltonianfilereader.hpp  main.hpp  mastereq.hpp  mpi_logger.hpp  optimproblem.hpp  optimtarget.hpp  oscillator.hpp  output.hpp  quandary_core.hpp  timestepper.hpp  util.hpp
parameter_reference/: index.html
python/: CMakeLists.txt  bindings.cpp
python/quandary/: __init__.py  quandary.py  results.py
python/quandary/new/: __init__.py  _structs.py  config.py  config_builders.py  physics.py  quandary.py  quantum_operators.py  results.py  run.py  runner.py  setup_helpers.py  time_estimation.py  types.py  utils.py  visualization.py
python_api/: index.html
search/: search_index.json
src/: CMakeLists.txt  cfgparser.cpp  config.cpp  controlbasis.cpp  entry.cpp  gate.cpp  hamiltonianfilereader.cpp  main.cpp  mastereq.cpp  optimproblem.cpp  optimtarget.cpp  oscillator.cpp  output.cpp  quandary_core.cpp  timestepper.cpp  util.cpp
tests/: conftest.py
tests/performance/: README.md  test_cases.json
tests/performance/configs/: nlevels_16_16_16_16.toml  nlevels_2_2_gradient_lindblad.toml  nlevels_32_32_32_32.toml  nlevels_32_32_32_32_simulation.toml  nlevels_4_4_4_4.toml  nlevels_4_4_4_4_gradient_schroed.toml
tests/python/: conftest.py  test_env_variable.py  test_example_cnot.py  test_example_cnot_const_init_ctrl.py  test_example_cnot_withguardlevels.py  test_example_piecewise_constant_controls.py  test_example_qft.py  test_example_spinchain.py  test_example_state_to_state.py  test_example_swap02.py  test_example_swap12.py  utils.py
tests/python/new/: conftest.py  test_custom_hamiltonian.py  test_env_variable.py  test_estimate_timestep_size.py  test_evaluate_controls.py  test_example_cnot.py  test_example_cnot_const_init_ctrl.py  test_example_cnot_withguardlevels.py  test_example_piecewise_constant_controls.py  test_example_qft.py  test_example_spinchain.py  test_example_state_to_state.py  test_example_swap02.py  test_example_swap12.py  test_fit_bspline2nd.py  test_get_results.py  test_internals.py  test_load_config_input.py  test_validation.py
tests/regression/: README.md  regression_test.py  test_cases.json
tests/regression/AxC/: AxC.cfg  AxC.toml
tests/regression/AxC_grad/: AxC_grad.cfg  AxC_grad.toml
tests/regression/AxC_grad_initBasis0/: AxC_grad_initBasis0.cfg  AxC_grad_initBasis0.toml
tests/regression/AxC_grad_schroedinger/: AxC_grad_schroedinger.cfg  AxC_grad_schroedinger.toml
tests/regression/AxC_initDiag0/: AxC_initDiag0.cfg  AxC_initDiag0.toml
tests/regression/AxC_initEnsemble/: AxC_initEnsemble.cfg  AxC_initEnsemble.toml
tests/regression/AxC_initFile/: AxC_initFile.cfg  AxC_initFile.toml
tests/regression/cnot/: cnot.cfg  cnot.toml
tests/regression/cnot_fromfile/: cnot_fromfile.cfg  cnot_fromfile.toml
tests/regression/hamiltonian-reader/: hamiltonian-reader.cfg  hamiltonian-reader.toml
tests/regression/hamiltonian-reader-lindblad/: hamiltonian-reader-lindblad.cfg  hamiltonian-reader-lindblad.toml
tests/regression/nlevels_4_4_4_4/: nlevels_4_4_4_4.cfg  nlevels_4_4_4_4.toml
tests/regression/pipulse/: pipulse.cfg  pipulse.toml
tests/regression/xgate/: xgate.cfg  xgate.toml
tests/unit/: CMakeLists.txt  test_argparser.cpp  test_cfgparser.cpp  test_tomlparser.cpp
tests/utils/: common.py
user_guide/: index.html
util/: benchmark_gpu_cpu.sh  extract_results.sh  gpu_petsc_ab.sh  simple_benchmark.sh  slurm_script  submit_scalingstudy.py
(+12 files in other folders)
