[project]
name = "quandary"
version = "4.4.dev0"
description = "Optimal control for open quantum systems"
authors = [
    {name = "Stefanie Guenther", email = "guenther5@llnl.gov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26,<3.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "pandas>=2.2.3,<3.0.0",
]

[project.optional-dependencies]
# mpi4py and petsc4py must be compiled against the system MPI and PETSc.
# petsc4py must match your PETSc minor version. See README for install instructions.
ext = [
    "mpi4py>=3.1.0",
    "petsc4py>=3.20.0",
]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-benchmark>=5.1.0,<6.0.0",
    "pydantic>=2.10.6,<3.0.0",
]

[build-system]
requires = ["scikit-build-core >=0.4.3"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["python/quandary"]
cmake.args = ["-DENABLE_TESTS=OFF"]

# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
