[project]
name = "quandary"
version = "4.4.dev0"
description = "Optimal control for open quantum systems"
authors = [
    {name = "Stefanie Guenther", email = "guenther5@llnl.gov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26,<3.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "pandas>=2.2.3,<3.0.0",
    "mpi4py>=3.1.0",
]

[project.optional-dependencies]
# Workaround: petsc4py <= 3.24 passes a removed `dry_run` kwarg to setuptools'
# execute(), which breaks with setuptools >= 76. Fixed in PETSc main (MR !9044)
# but not yet released for 3.24.x. Remove this extra once petsc4py ships the fix.
# See: https://gitlab.com/petsc/petsc/-/merge_requests/9044
petsc = [
    "setuptools<76",
    "wheel",
    "cython",
]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-benchmark>=5.1.0,<6.0.0",
    "pydantic>=2.10.6,<3.0.0",
]

[build-system]
requires = ["scikit-build-core >=0.4.3"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["python/quandary"]
cmake.args = ["-DENABLE_TESTS=OFF"]

# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
